新增追涨杀跌策略作为示例

--- a/PandoraStrategy/PandoraStrategy.vcxproj
+++ b/PandoraStrategy/PandoraStrategy.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cwChasingRisingStrategy.cpp" />
     <ClCompile Include="cwEmptyStrategy.cpp" />
     <ClCompile Include="cwMarketDataReceiver.cpp" />
     <ClCompile Include="cwPandoraAgentManager.cpp" />
@@ -131,12 +132,16 @@
     <ClCompile Include="cwStrategyDemo.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cwChasingRisingStrategy.h" />
     <ClInclude Include="cwEmptyStrategy.h" />
     <ClInclude Include="cwMarketDataReceiver.h" />
     <ClInclude Include="cwPandoraAgentManager.h" />
     <ClInclude Include="cwPandoraPairTrading.h" />
     <ClInclude Include="cwPandoraPositionAgent.h" />
     <ClInclude Include="cwStrategyDemo.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="cwChasingRisingStrategy.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
