--- a/PandoraStrategy/PandoraStrategy.vcxproj.filters
+++ b/PandoraStrategy/PandoraStrategy.vcxproj.filters
@@ -85,5 +85,8 @@
     <Xml Include="cwChasingRisingStrategy.xml">
       <Filter>XmlConfig</Filter>
     </Xml>
+    <Xml Include="CTAPlatformConfig.xml">
+      <Filter>XmlConfig</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
