--- a/PandoraStrategy/PandoraStrategy.vcxproj.filters
+++ b/PandoraStrategy/PandoraStrategy.vcxproj.filters
@@ -18,66 +18,27 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="cwEmptyStrategy.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="cwStrategyDemo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cwPandoraAgentManager.cpp">
+    <ClCompile Include="SqlliteHelp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cwPandoraPairTrading.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="cwPandoraPositionAgent.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="cwMarketDataReceiver.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="cwChasingRisingStrategy.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="cwCTAPlatform.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="cwDualTrust.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="cwBasicCTAStrategy.cpp">
+    <ClCompile Include="Strformatdate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cwEmptyStrategy.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="cwStrategyDemo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="cwPandoraAgentManager.h">
+    <ClInclude Include="sqlite3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="cwPandoraPairTrading.h">
+    <ClInclude Include="SqlliteHelp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="cwPandoraPositionAgent.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="cwMarketDataReceiver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="cwChasingRisingStrategy.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="cwCTAPlatform.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="cwDualTrust.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="cwBasicCTAStrategy.h">
+    <ClInclude Include="Strformatdate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
