feat: add class1 file

--- a/PandoraStrategy/PandoraStrategy.vcxproj.filters
+++ b/PandoraStrategy/PandoraStrategy.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Strformatdate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Class1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cwStrategyDemo.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Strformatdate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Class1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
