--- a/PandoraStrategy/PandoraStrategy.vcxproj
+++ b/PandoraStrategy/PandoraStrategy.vcxproj
@@ -123,11 +123,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Class1.cpp" />
     <ClCompile Include="cwStrategyDemo.cpp" />
     <ClCompile Include="SqlliteHelp.cpp" />
     <ClCompile Include="Strformatdate.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Class1.h" />
     <ClInclude Include="cwStrategyDemo.h" />
     <ClInclude Include="sqlite3.h" />
     <ClInclude Include="SqlliteHelp.h" />
