feat: fix a lot

--- a/PandoraStrategy/PandoraStrategy.vcxproj.filters
+++ b/PandoraStrategy/PandoraStrategy.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="Class1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="My_structs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="cwChasingRisingStrategy.xml">
