--- a/PandoraStrategy/PandoraStrategy.vcxproj
+++ b/PandoraStrategy/PandoraStrategy.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClInclude Include="Class1.h" />
     <ClInclude Include="cwStrategyDemo.h" />
+    <ClInclude Include="My_structs.h" />
     <ClInclude Include="sqlite3.h" />
     <ClInclude Include="SqlliteHelp.h" />
     <ClInclude Include="Strformatdate.h" />
