--- a/PandoraTrade/PandoraTrader.vcxproj
+++ b/PandoraTrade/PandoraTrader.vcxproj
@@ -74,7 +74,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\local\boost_1_87_0;$(IncludePath)</IncludePath>
+    <IncludePath>D:\boost_1_88_0;C:\local\boost_1_87_0;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
