feat: serveral fix

--- a/PandoraStrategy/PandoraStrategy.vcxproj
+++ b/PandoraStrategy/PandoraStrategy.vcxproj
@@ -129,14 +129,13 @@
   <ItemGroup>
     <ClCompile Include="..\Interface\include\sqlite3.c" />
     <ClCompile Include="cwStrategyDemo.cpp" />
-    <ClCompile Include="SqlliteHelp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Interface\include\sqlite3.h" />
     <ClInclude Include="IndayStrategy.hpp" />
     <ClInclude Include="cwStrategyDemo.h" />
     <ClInclude Include="MyStructs.h" />
-    <ClInclude Include="SqlliteHelp.h" />
+    <ClInclude Include="SQLiteHelp.hpp" />
     <ClInclude Include="Utils.hpp" />
   </ItemGroup>
   <ItemGroup>
