--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 
 /Interface/MySql
 /.vs/
-/PandoraStrategy/x64
-/PandoraTrade/x64
+/PandoraStrategy/x64/
+/PandoraTrade/x64/
 /x64/Debug/
 /PandoraTrade/his2025.db
+/PandoraTrade/mydata.db
