--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /PandoraStrategy/x64/
 /PandoraTrade/x64/
 /x64/Debug/
+\x64\Debug\
 /PandoraTrade/his2025.db
 /PandoraTrade/mydata.db
 /PandoraStrategy/Utils.hpp
