--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@
 /PandoraTrade/his2025.db
 /PandoraTrade/mydata.db
 /PandoraStrategy/Utils.hpp
+/x64/Debug/PandoraTrader.pdb
+/x64/Debug/Trade/1/QueryRsp.con
+/x64/Debug/Trade/1/DialogRsp.con
+/PandoraTrade/x64/Debug/PandoraTrader.log
+/PandoraTrade/x64/Debug/PandoraTrader.tlog/link.read.1.tlog
