--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /x64/Debug/Trade/1/DialogRsp.con
 /PandoraTrade/x64/Debug/PandoraTrader.log
 /PandoraTrade/x64/Debug/PandoraTrader.tlog/link.read.1.tlog
+/x64/Debug/PandoraStrategy.lib
+/PandoraStrategy/x64/Debug/PandoraStrategy.log
