--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 /PandoraTrade/x64/Debug/PandoraTrader.tlog/link.read.1.tlog
 /x64/Debug/PandoraStrategy.lib
 /PandoraStrategy/x64/Debug/PandoraStrategy.log
+/PandoraTrade/x64/Debug/PandoraDemoStrategyTrader.obj
+/PandoraTrade/x64/Debug/vc143.idb
+/PandoraTrade/x64/Debug/vc143.pdb
