--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 /PandoraTrade/x64/Debug/PandoraDemoStrategyTrader.obj
 /PandoraTrade/x64/Debug/vc143.idb
 /PandoraTrade/x64/Debug/vc143.pdb
+/x64/Debug/PandoraStrategy.pdb
+/x64/Debug/PandoraStrategy.idb
