--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /PandoraTrade/x64/Debug/vc143.pdb
 /x64/Debug/PandoraStrategy.pdb
 /x64/Debug/PandoraStrategy.idb
+/PandoraStrategy/x64/Debug/PandoraStrategy.tlog/CL.read.1.tlog
