feat: print update

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@
 /x64/Debug/PandoraStrategy.pdb
 /x64/Debug/PandoraStrategy.idb
 /PandoraStrategy/x64/Debug/PandoraStrategy.tlog/CL.read.1.tlog
+/x64/Debug/Quotes/1/TradingDay.con
+/x64/Debug/Trade/1/Private.con
+/x64/Debug/Trade/1/Public.con
+/x64/Debug/Instrument.xml
+/x64/Debug/Trade/1/TradingDay.con
