--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@
 /x64/Debug/Trade/1/Public.con
 /x64/Debug/Instrument.xml
 /x64/Debug/Trade/1/TradingDay.con
+/PandoraStrategy/x64/Debug/sqlite3.obj
+/PandoraStrategy/x64/Debug/PandoraStrategy.tlog/CL.command.1.tlog
+/PandoraStrategy/x64/Debug/PandoraStrategy.tlog/Cl.items.tlog
+/PandoraStrategy/x64/Debug/PandoraStrategy.tlog/Lib.command.1.tlog
+/PandoraStrategy/x64/Debug/PandoraStrategy.tlog/PandoraStrategy.lastbuildstate
