feat: static variable

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 /PandoraStrategy/x64/Debug/PandoraStrategy.tlog/Cl.items.tlog
 /PandoraStrategy/x64/Debug/PandoraStrategy.tlog/Lib.command.1.tlog
 /PandoraStrategy/x64/Debug/PandoraStrategy.tlog/PandoraStrategy.lastbuildstate
+/PandoraStrategy/x64/Debug/PandoraStrategy.tlog/CL.write.1.tlog
